--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Rocet.sect</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <div class="page">
       <nav>
@@ -25,13 +35,19 @@
       </nav>
 
       <main>
-        <img src="imagens/img1.png" alt="Desenho de uma mulher ao lado de um Notebook">
+        <img
+          src="imagens/img1.png"
+          alt="Desenho de uma mulher ao lado de um Notebook"
+        />
         <section>
           <h1>Seus dados estão <span>protegidos?</span></h1>
           <p>
-            A informação é fundamental e de extrema importância para qualquer empresa.
-            <br><br>
-            Aqui vai um texto como se fosse uma empresa de <span>segurança da informação</span> apresentando o seu produto e com o texto todo estilizado.
+            A informação é fundamental e de <strong>extrema importância</strong> para qualquer
+            empresa.
+            <br /><br />
+            Aqui vai um <strong>texto</strong> como se fosse uma empresa de
+            <span>segurança da informação</span> apresentando o seu produto e
+            com o texto todo estilizado.
           </p>
         </section>
       </main>
@@ -40,7 +56,7 @@
         <div id="line"></div>
         <p>para mais informações nos siga no instagram @rocketsect</p>
       </footer>
-      <img id="padlock" src="imagens/padlock.svg" alt="Desenho de um cadeado">
+      <img id="padlock" src="imagens/padlock.svg" alt="Desenho de um cadeado" />
     </div>
   </body>
 </html>
